actividad fecth http

--- a/clase11/actividad fetch/index.html
+++ b/clase11/actividad fetch/index.html
@@ -6,6 +6,10 @@
     <title>.</title>
     </head>
     <body>
+        <form action="results.html" method="get">
+            <input type="text" name="buscador" placeholder="escriba aqui...">
+            <button type="submit">SEARCH</button>
+        </form>
         <h1>Personajes de rick and morty</h1>
         <section class="characterList">  </section>
         <script src="js/index.js"></script>
